--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ dependencies{
 	compile 'javax.ws.rs:javax.ws.rs-api:2.0.1'
 	compile 'mysql:mysql-connector-java:5.1.30'
 	compile 'org.mongodb:mongodb-driver:3.3.0'
+	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
 	testCompile 'org.glassfish.jersey.test-framework.providers:jersey-test-framework-provider-simple:2.17'
 	testCompile 'javax.servlet:javax.servlet-api:3.1.0'
 }
