--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ dependencies{
 	compile 'mysql:mysql-connector-java:5.1.30'
 	compile 'org.mongodb:mongodb-driver:3.3.0'
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+	compile 'org.neo4j.driver:neo4j-java-driver:1.0.6'
 	testCompile 'org.glassfish.jersey.test-framework.providers:jersey-test-framework-provider-simple:2.17'
 	testCompile 'javax.servlet:javax.servlet-api:3.1.0'
 }
