--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ dependencies{
 	compile 'org.neo4j.driver:neo4j-java-driver:1.0.6'
 	testCompile 'org.glassfish.jersey.test-framework.providers:jersey-test-framework-provider-simple:2.17'
 	testCompile 'javax.servlet:javax.servlet-api:3.1.0'
+	compile group: 'org.twitter4j', name: 'twitter4j-stream', version: '4.0.5'
+	compile group: 'org.twitter4j', name: 'twitter4j-core', version: '4.0.5'
 }
 
 sourceSets.all {
